[gd_scene load_steps=23 format=3 uid="uid://w7j6d2dkb4nj"]

[ext_resource type="Script" path="res://Scripts/Game/infinite_game.gd" id="1_xdhcq"]
[ext_resource type="FontFile" uid="uid://lcesxi7ufvqq" path="res://Assets/Font/Jaro-font/static/Jaro-Regular.ttf" id="3_yfw10"]
[ext_resource type="Texture2D" uid="uid://cycmuneb5smn" path="res://Assets/Background/background_score.png" id="4_d5js6"]
[ext_resource type="PackedScene" uid="uid://bct33vel4171k" path="res://Scenes/Game/UI/Progress_Bar.tscn" id="4_g5gb6"]
[ext_resource type="Texture2D" uid="uid://djau16pay188g" path="res://Assets/Background/background_grid.png" id="5_d5hdt"]
[ext_resource type="Theme" uid="uid://bo63kkmto5g8t" path="res://Themes/Empty_button.tres" id="5_uh6up"]
[ext_resource type="Texture2D" uid="uid://c7tan1wa0bfhj" path="res://Assets/Buttons/Game_buttons/trash_button_normal.png" id="6_eycqw"]
[ext_resource type="Texture2D" uid="uid://vwjnuq2bmhk3" path="res://Assets/Buttons/Game_buttons/trash_button_pressed.png" id="7_llyq5"]
[ext_resource type="Texture2D" uid="uid://bc4gfaba7w7y5" path="res://Assets/Buttons/Game_buttons/reroll_button_normal.png" id="8_fucj5"]
[ext_resource type="Texture2D" uid="uid://cjovv0jxdiq76" path="res://Assets/Buttons/Game_buttons/reroll_button_pressed.png" id="9_txnpq"]
[ext_resource type="Texture2D" uid="uid://c7wwdalx2hd86" path="res://Assets/Buttons/Game_buttons/rotate_button_normal.png" id="10_ddmfd"]
[ext_resource type="Texture2D" uid="uid://46b45yd1xkth" path="res://Assets/Buttons/Game_buttons/rotate_button_pressed.png" id="11_0sxnt"]
[ext_resource type="PackedScene" uid="uid://dgpjbpq0305dx" path="res://Scenes/Game/UI/Game_Over.tscn" id="12_u2n1t"]
[ext_resource type="Texture2D" uid="uid://csgwid63soq0h" path="res://Assets/Buttons/Game_buttons/notif_count_texture.png" id="13_pf2sq"]
[ext_resource type="Texture2D" uid="uid://ta4om2kemqdv" path="res://Assets/Background/preview_zone.png" id="13_s84ug"]
[ext_resource type="Texture2D" uid="uid://dlxuj0krvxm6t" path="res://Assets/Buttons/Game_buttons/back_button_normal.png" id="14_ekk7s"]
[ext_resource type="Texture2D" uid="uid://b3ag2tcjcos13" path="res://Assets/Buttons/Game_buttons/back_button_pressed.png" id="15_0c82l"]
[ext_resource type="Texture2D" uid="uid://dcsuyo5e544h7" path="res://Assets/Buttons/Game_buttons/param_button_normal.png" id="18_mg4o2"]
[ext_resource type="Texture2D" uid="uid://4nqwucu0fv5b" path="res://Assets/Buttons/Game_buttons/param_button_pressed.png" id="19_4spei"]
[ext_resource type="PackedScene" uid="uid://df1j1s2aa4kir" path="res://Scenes/Help/Help.tscn" id="20_i0p6p"]
[ext_resource type="PackedScene" uid="uid://c6xbu1atc0fjc" path="res://Scenes/Game/UI/Options.tscn" id="21_0d2wn"]

[sub_resource type="Theme" id="Theme_mwabh"]

[node name="Infinite_mode" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xdhcq")
metadata/_edit_vertical_guides_ = [50.0, 239.0, 246.0, 670.0]
metadata/_edit_horizontal_guides_ = [881.0, 1089.0]

[node name="Backgrounds" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="Backgrounds"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.933333, 0.972549, 0.992157, 1)

[node name="Background_Preview" type="TextureRect" parent="Backgrounds"]
layout_mode = 0
offset_left = 47.0
offset_top = 862.0
offset_right = 667.0
offset_bottom = 1074.0
texture = ExtResource("13_s84ug")

[node name="Background_Level" type="TextureRect" parent="Backgrounds"]
layout_mode = 0
offset_left = 270.0
offset_top = 47.0
offset_right = 450.0
offset_bottom = 107.0
texture = ExtResource("4_d5js6")

[node name="Background_Grid" type="TextureRect" parent="Backgrounds"]
layout_mode = 0
offset_left = 47.0
offset_top = 225.0
offset_right = 667.0
offset_bottom = 845.0
texture = ExtResource("5_d5hdt")

[node name="Level" type="Label" parent="."]
layout_mode = 0
offset_left = 280.0
offset_top = 140.0
offset_right = 441.0
offset_bottom = 223.0
theme_override_colors/font_color = Color(0.294118, 0.996078, 0.462745, 1)
theme_override_fonts/font = ExtResource("3_yfw10")
theme_override_font_sizes/font_size = 30
text = "Level 1"
horizontal_alignment = 1

[node name="ProgressBar" parent="." instance=ExtResource("4_g5gb6")]
layout_mode = 0
offset_left = 670.0
offset_top = 208.0
offset_right = 1290.0
offset_bottom = 235.0

[node name="VBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
offset_left = 50.0
offset_top = 1282.0
offset_right = 468.0
offset_bottom = 1386.0
theme_override_constants/separation = 25

[node name="Delete" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_uh6up")
texture_normal = ExtResource("6_eycqw")
texture_pressed = ExtResource("7_llyq5")
texture_disabled = ExtResource("7_llyq5")

[node name="Reroll" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_uh6up")
texture_normal = ExtResource("8_fucj5")
texture_pressed = ExtResource("9_txnpq")
texture_disabled = ExtResource("9_txnpq")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 112.0
offset_right = 42.0
offset_bottom = 152.0

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/Label"]
layout_mode = 2
offset_left = 566.0
offset_top = 1170.0
offset_right = 668.0
offset_bottom = 1272.0

[node name="Rotate" type="TextureButton" parent="VBoxContainer2/Label/MarginContainer"]
layout_mode = 2
theme = ExtResource("5_uh6up")
texture_normal = ExtResource("10_ddmfd")
texture_pressed = ExtResource("11_0sxnt")

[node name="GridContainer" type="GridContainer" parent="."]
clip_contents = true
layout_mode = 1
offset_left = 60.0
offset_top = 239.0
offset_right = 680.0
offset_bottom = 859.0
theme_override_constants/h_separation = -3
theme_override_constants/v_separation = -3
columns = 10

[node name="GameOver" parent="." instance=ExtResource("12_u2n1t")]
visible = false
layout_mode = 0
offset_left = 246.0
offset_top = 432.0
offset_right = 477.0
offset_bottom = 575.0

[node name="PreviewZone" type="Control" parent="."]
anchors_preset = 0
offset_left = 54.0
offset_top = 867.0
offset_right = 94.0
offset_bottom = 907.0

[node name="Preview" type="TextureRect" parent="PreviewZone"]
layout_mode = 2
offset_left = 94.0
offset_top = 95.0
offset_right = 94.0
offset_bottom = 95.0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(0, 1)

[node name="Preview2" type="TextureRect" parent="PreviewZone"]
layout_mode = 2
offset_left = 310.0
offset_top = 101.0
offset_right = 310.0
offset_bottom = 101.0
scale = Vector2(0.5, 0.5)

[node name="Preview3" type="TextureRect" parent="PreviewZone"]
layout_mode = 2
offset_left = 524.0
offset_top = 101.0
offset_right = 524.0
offset_bottom = 101.0
scale = Vector2(0.5, 0.5)

[node name="AmountOf" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureAmountOfDelete" type="TextureRect" parent="AmountOf"]
layout_mode = 0
offset_left = 125.0
offset_top = 1275.0
offset_right = 163.0
offset_bottom = 1313.0
texture = ExtResource("13_pf2sq")

[node name="AmountOfDelete" type="Label" parent="AmountOf/TextureAmountOfDelete"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_mwabh")
theme_override_fonts/font = ExtResource("3_yfw10")
theme_override_font_sizes/font_size = 23
text = "2"
horizontal_alignment = 1

[node name="TextureAmountOfReroll" type="TextureRect" parent="AmountOf"]
layout_mode = 0
offset_left = 252.0
offset_top = 1275.0
offset_right = 292.0
offset_bottom = 1315.0
texture = ExtResource("13_pf2sq")

[node name="AmountOfReroll" type="Label" parent="AmountOf/TextureAmountOfReroll"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_mwabh")
theme_override_fonts/font = ExtResource("3_yfw10")
theme_override_font_sizes/font_size = 23
text = "2"
horizontal_alignment = 1

[node name="HeadApp" type="Control" parent="."]
anchors_preset = 0
offset_left = 289.0
offset_top = 50.0
offset_right = 329.0
offset_bottom = 90.0

[node name="Score" type="Label" parent="HeadApp"]
layout_mode = 0
offset_left = -9.0
offset_top = -5.0
offset_right = 152.0
offset_bottom = 58.0
theme_override_colors/font_color = Color(0.294118, 0.996078, 0.462745, 1)
theme_override_fonts/font = ExtResource("3_yfw10")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1

[node name="Menu" type="TextureButton" parent="HeadApp"]
layout_mode = 0
offset_left = -239.0
offset_top = 3.0
offset_right = -176.0
offset_bottom = 66.0
pivot_offset = Vector2(313, 1156)
theme = ExtResource("5_uh6up")
texture_normal = ExtResource("14_ekk7s")
texture_pressed = ExtResource("15_0c82l")

[node name="ParamButton" type="TextureButton" parent="HeadApp"]
layout_mode = 0
offset_left = 319.0
offset_top = 3.0
offset_right = 381.0
offset_bottom = 66.0
theme = ExtResource("5_uh6up")
texture_normal = ExtResource("18_mg4o2")
texture_pressed = ExtResource("19_4spei")

[node name="Help" parent="." instance=ExtResource("20_i0p6p")]
visible = false

[node name="Options" parent="." instance=ExtResource("21_0d2wn")]
visible = false
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="VBoxContainer/Reroll" to="." method="_on_change_piece_pressed"]
[connection signal="pressed" from="VBoxContainer2/Label/MarginContainer/Rotate" to="." method="_on_rotate_pressed"]
[connection signal="pressed" from="HeadApp/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="HeadApp/ParamButton" to="." method="_on_param_button_pressed"]
[connection signal="Quit_Pressed" from="Help" to="." method="_on_help_quit_pressed"]
